# ticket-bot

./: .gitignore  Dockerfile  README.md  bot.py  example-env  handlers.py  pyproject.toml  requirements.txt
bot-ticket/: bot.py  handlers.py
utils/: bx24.py  handlers.py
